examples/test/testpolicy11733.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11733
  namespace: namespace371
spec:
  podSelector:
    matchLabels:
      key14: value44
      key36: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
          key37: value49
          key45: value15
      podSelector:
        matchLabels:
          key12: value0
          key7: value33
